Updated nav bar & fixed some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,13 @@ img {
 Heading
 #########################*/
 
+header {
+	float: left;
+	margin: 0 0 30px 0;
+	padding: 5px 0 0 0;
+	width: 100%;
+}
+
 #logo {
 	text-align: center;
 	margin: 0;
@@ -33,7 +40,7 @@ Heading
 
 h1 {
 	font-family: 'Changa One', sans-serif;
-	margin: 15px 0;
+	margin: 0px 0;
 	font-size: 1.75em;
 	font-weight: normal;
 	line-height: 0.8em;
@@ -62,10 +69,18 @@ Navigation
 nav {
 	text-align: center;
 	padding: 10px 0;
-	margin: 20px 0;
+	margin: 20px 0 0;
 }
 
+nav ul {
+	list-style: none;
+	margin: 0 10px;
+	padding: 0;
+}
 
+nav li {
+	display: inline-block;
+}
 
 /*######################### 
 Page: Portfolio
